[gd_scene load_steps=10 format=3 uid="uid://bme4qv66ixic3"]

[ext_resource type="Script" path="res://Scripts/SpawnBuilding.gd" id="1_mpi8x"]
[ext_resource type="Resource" uid="uid://b06ad8fueuvma" path="res://Resources/Summons/Soldier.tres" id="2_38rnn"]
[ext_resource type="Resource" uid="uid://loedd3spndbe" path="res://Resources/Construction/Barracks.tres" id="2_45otd"]
[ext_resource type="Texture2D" uid="uid://cdaw28uixyhc5" path="res://Sprites/Barracks.png" id="2_gkm0f"]
[ext_resource type="Texture2D" uid="uid://d3js0ap46lesx" path="res://Sprites/Barracks_Construction.png" id="3_tqrtw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r08ch"]
size = Vector2(41, 24)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gwnr5"]
bg_color = Color(0.172549, 0.164706, 0.14902, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3sa71"]
bg_color = Color(0.0784314, 0.603922, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_peejr"]
bg_color = Color(0.188235, 0, 0.929412, 1)

[node name="Barracks" type="StaticBody2D"]
collision_layer = 16
collision_mask = 7
script = ExtResource("1_mpi8x")
construction_cost = ExtResource("2_45otd")
spawn_cost = ExtResource("2_38rnn")

[node name="ActiveSprite" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_gkm0f")

[node name="ConstructionSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_tqrtw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 2)
shape = SubResource("RectangleShape2D_r08ch")

[node name="HealthBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = 20.0
offset_right = 12.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_gwnr5")
theme_override_styles/fill = SubResource("StyleBoxFlat_3sa71")
step = 1.0
value = 25.0
show_percentage = false

[node name="BuildBar" type="ProgressBar" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -12.0
offset_top = 18.0
offset_right = 12.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
theme_override_styles/background = SubResource("StyleBoxFlat_gwnr5")
theme_override_styles/fill = SubResource("StyleBoxFlat_peejr")
step = 1.0
value = 10.0
show_percentage = false

[node name="QueueLabel" type="Label" parent="."]
visible = false
offset_left = -8.0
offset_top = -33.0
offset_right = 9.0
offset_bottom = -7.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnPoint" type="Node2D" parent="."]
position = Vector2(0, 26)
